# nova-ai-lang

./: .gitignore  STDLIB_DEMO.py  nova_repl.py  novaplan.md
compiler/: nova_repl.py
compiler/codegen/src/: ffi.rs  ir_emitter.rs
compiler/codegen/tests/: test_codegen.rs
compiler/parser/: CMakeLists.txt
compiler/parser/include/: parser_ffi.h
compiler/parser/src/: parser_ffi.c
compiler/stdlib_interfaces/: cosmos_astro.nv  cosmos_chem.nv  cosmos_data.nv  cosmos_geo.nv  cosmos_ml.nv  cosmos_orbital.nv  cosmos_plot.nv  cosmos_quantum.nv  cosmos_signal.nv  cosmos_spectral.nv  cosmos_stats.nv  cosmos_thermo.nv  nova_cli.nv  nova_concurrent.nv  nova_crypto.nv  nova_db.nv  nova_fmt.nv  nova_fs.nv  nova_net.nv  nova_test.nv
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
scripts/: run_all_tests.ps1
stdlib/: requirements-minimal.txt  requirements.txt
stdlib/cosmos/astro/: __init__.py  astro.py
stdlib/cosmos/chem/: __init__.py  chem.py
stdlib/cosmos/data/: __init__.py  data.py
stdlib/cosmos/geo/: __init__.py  geo.py
stdlib/cosmos/ml/: __init__.py  ml.py
stdlib/cosmos/orbital/: __init__.py  orbital.py
stdlib/cosmos/plot/: __init__.py  plot.py
stdlib/cosmos/quantum/: __init__.py  quantum.py
stdlib/cosmos/signal/: __init__.py  signal.py
stdlib/cosmos/spectral/: __init__.py  spectral.py
stdlib/nova/: __init__.py
tests/integration/: run_stdlib_step12_unittest.py  test_stdlib_new_constellations.py  test_stdlib_step12.py
toolchain/: __init__.py
toolchain/nova_repl/: __init__.py  __main__.py  c_parser_ffi.py  repl.py  tiny_parser.py
(+20 files in other folders)
